# snake-arena

./: .dockerignore  AGENTS.md  DOCKER.md  DOCKER_COMPOSE.md  Dockerfile  Makefile  POSTGRES.md  docker-compose.yml  openapi.yaml  package.json
.lovable/: plan.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  dependencies.py  main.py  models.py  store.py
backend/app/routers/: auth.py  live.py  scores.py
backend/tests/: conftest.py  test_auth.py  test_docs.py  test_frontend_static.py  test_live.py  test_scores.py
backend/tests_integration/: conftest.py  test_player_flows.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.spa.config.ts  vitest.config.ts
frontend/src/: routeTree.gen.ts  spa.tsx  styles.css
frontend/src/game/: engine.ts  input.test.ts  input.ts
frontend/src/routes/: __root.tsx  auth.login.tsx  play.$mode.tsx  watch.$gameId.tsx
frontend/src/services/: index.ts  mock.test.ts  mock.ts  real.ts  types.ts
src/components/: SnakeBoard.tsx
src/game/: engine.test.ts
src/hooks/: useAuth.ts
src/routes/: auth.signup.tsx  index.tsx  leaderboard.tsx  play.$mode.tsx  watch.index.tsx
src/services/: index.ts  mock.test.ts
